# encurta-ai

./: .gitignore  Cargo.toml  README.md  compose.yaml  dev.yaml  dockerfile  recipe.json
config/: development.yaml  test.yaml
examples/: playground.rs
frontend/: package-lock.json  package.json  rsbuild.config.ts
frontend/src/: App.tsx  AuthLayout.tsx  Footer.tsx  Header.tsx  Hello.tsx  Home.tsx  Link.tsx  Login.tsx  Main.tsx  Menu.tsx  Register.tsx  index.tsx
migration/src/: lib.rs  m20250720_054916_routers.rs
src/: app.rs
src/controllers/: auth.rs  mod.rs  router.rs
src/models/: mod.rs  routers.rs  users.rs
src/models/_entities/: mod.rs  prelude.rs  routers.rs
tests/models/: mod.rs  routers.rs  users.rs
tests/models/snapshots/: can_save_link@routers.snap  can_validate_model.snap
tests/requests/: auth.rs  mod.rs  prepare_data.rs  router.rs
tests/requests/snapshots/: can_save_link@router_request.snap.new
