[[bin]]
path = "src/bin/main.rs"
name = "encurta_ai"
plugin = false
proc-macro = false
edition = "2021"
required-features = []

[[test]]
path = "tests/mod.rs"
name = "mod"
plugin = false
proc-macro = false
edition = "2021"
required-features = []

[[example]]
path = "examples/playground.rs"
name = "playground"
plugin = false
proc-macro = false
edition = "2021"
required-features = []
crate-type = ["bin"]

[package]
name = "encurta-ai"
edition = "2021"
version = "0.0.1"
default-run = "encurta_ai"
publish = false

[workspace]
members = []

[workspace.dependencies.loco-rs]
version = "0.16"
features = ["testing"]

[dependencies]
sha256 = "1.6.0"

[dependencies.async-trait]
version = "0.1.74"

[dependencies.axum]
version = "0.8.1"

[dependencies.axum-extra]
version = "0.10"
features = ["form"]

[dependencies.chrono]
version = "0.4"

[dependencies.include_dir]
version = "0.7"

[dependencies.loco-rs]
workspace = true

[dependencies.migration]
path = "migration"

[dependencies.regex]
version = "1.11.1"

[dependencies.sea-orm]
version = "1.1.0"
features = ["sqlx-sqlite", "sqlx-postgres", "runtime-tokio-rustls", "macros"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.serde_json]
version = "1"

[dependencies.tokio]
version = "1.33.0"
features = ["rt-multi-thread"]
default-features = false

[dependencies.tracing]
version = "0.1.40"

[dependencies.tracing-subscriber]
version = "0.3.17"
features = ["env-filter", "json"]

[dependencies.uuid]
version = "1.6.0"
features = ["v4"]

[dependencies.validator]
version = "0.20"

[dev-dependencies.insta]
version = "1.34.0"
features = ["redactions", "yaml", "filters"]

[dev-dependencies.loco-rs]
workspace = true
features = ["testing"]

[dev-dependencies.rstest]
version = "0.21.0"

[dev-dependencies.serial_test]
version = "3.1.1"

[lib]
path = "src/lib.rs"
name = "encurta_ai"
plugin = false
proc-macro = false
edition = "2021"
required-features = []
crate-type = ["lib"]
